css/theme.css
* {
    margin: 0;
    padding: 0;
    font-family: 'Noto Sans', sans-serif;
    font-size: 18px;
    text-align: center;
}

h1, h2, h3, h4, h5, small, .form-text {
    color: white;
}

h1 {
    font-family: 'Lobster Two', cursive;
    font-size: 48px;
    white-space: nowrap;
    overflow: hidden;
}

h3 {
    font-size: 26px;
    font-weight: bold;
    text-shadow: 2px 2px #343A40;
}

h4 {
    text-align: left;
    font-weight: bold;
}

h5 {
    text-align: left;
    font-size: 14px;
    font-weight: italic;
}

nav {
    background-color: transparent;
}

hr {
    background-color: white;
}

a:hover {
    text-decoration: none;
}

.day-text {
    font-family: monospace;
}

.shop-display {
    padding: 0px;
    margin-bottom: 80px;
    white-space: nowrap;
    overflow-y: hidden;
    overflow-x: auto;
}

.shop-card {
    color: black;
    height: 620px;
    white-space: normal;
    display: inline-block;
    height: 480px;
    width: 15rem;
    margin: 15px;
}

.shop-card:hover {
    color: #E86100;
}

.shop-card .card-title {
    font-weight: bold;
}

.shop-card * {
    margin: 0;
}

.shop-card .card-textContent {
    height: 25px;
    overflow-y: auto;
}

.reservation-table {
    padding: 0px;
    margin-bottom: 50px;
}

.reservation-table a {
    color: black;
    font-weight: bold;
}

.navbar-brand {
    font-family: 'Lobster Two', cursive;
    font-size: 26px;
}

.nav-item {
    margin-left: 5px;
}

.container-fluid {
    padding-top: 100px;
    padding-bottom: 100px;
    background-image: url(../images/wallpaper.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: scroll;
    height: auto;
    display: flex;
    justify-content: center;
    overflow: auto;
    overflow-x: hidden;
}

.input-group-text .fas {
    color: #343A40;
}

.datepicker * {
    color: black;
}

.popover-title * {
    color: grey;
}

.popover-title .text-primary {
    color: black!important;
}

input[readonly] {
  background-color: white!important;
}

.popup {
    position: fixed;
    bottom: 10%;
    left: 50%;
    transform: translateX(-50%);
}

